<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>self_drive</name>
  <version>0.1.0</version>
  <description>control turtle's velocity based on its position</description>
  <author email="sbdyr025@sch.ac.kr">LHJ_and_LJE</author>
  <maintainer email="sbdyr025@sch.ac.kr">LHJ_and_LJE</maintainer>
  <license>MIT License</license>

  <depend>rclpy</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
